syntax = "proto3";
package echo;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

service Echo {
    rpc Echo (EchoAny) returns (EchoAny);
    rpc EchoValue (EchoAnyValue) returns (EchoAnyValue);
}

message EchoAny{
    google.protobuf.Any value = 1;
}
message EchoAnyValue {
    google.protobuf.Value value = 1;
}
